--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dio: ^5.3.3
-  flutter_riverpod: ^2.4.3
+  dio: ^5.3.3 #MIT
+  flutter_riverpod: ^2.4.3 #MIT
+  go_router: ^11.1.3 #BSD
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
