--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   dio: ^5.3.3 #MIT
   flutter_riverpod: ^2.4.3 #MIT
   go_router: ^11.1.3 #BSD
+  fl_chart: ^0.64.0 #MIT
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
